# tensor-cores

./: CMakeLists.txt  README.md  benchmark.hpp  benchmark_cpu_float_rcr.cpp  benchmark_cpu_float_rcr.hpp  benchmark_cpu_float_rrr.cpp  benchmark_cpu_float_rrr.hpp  benchmark_cublas.cu  benchmark_cublas.hpp  benchmark_gpu_float_rrr.cu  benchmark_gpu_float_rrr.hpp  benchmark_gpu_float_rrr_shmem.cu  benchmark_gpu_float_rrr_shmem.hpp  benchmark_rcr_cpu_tiled_float.cpp  benchmark_rcr_cpu_tiled_float.hpp  benchmark_rrc_cublas_gemmex.cu  benchmark_rrc_cublas_gemmex.hpp  benchmark_rrc_tc_half.cu  benchmark_rrc_tc_half.hpp  benchmark_tc_half_rrr.cu  benchmark_tc_half_rrr.hpp  benchmark_tc_half_rrr_shmem.cu  benchmark_tc_half_rrr_shmem.hpp  cuda_runtime.hpp  main.cu  numeric.cpp  numeric.hpp  time.hpp
